# app/api/codegen/swagger.json
@@ -445,6 +445,46 @@
         }
       }
     },
+    "/ajax/customer/verifycode": {
+      "post": {
+        "description": "Auto-generated API documentation",
+        "tags": [
+          "(*CustomerController)"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "code"
+              ],
+              "properties": {
+                "code": {
+                  "description": "驗證碼",
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "succeed": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/ajax/game/energy": {
       "get": {
         "description": "Auto-generated API documentation",
@@ -525,7 +565,7 @@
           {
             "type": "string",
             "format": "date-time",
-            "description": " (Required). Format: 2006-01-02T15:04:05Z07:00",
+            "description": " (Required)",
             "name": "startTime",
             "in": "query",
             "required": true
@@ -533,7 +573,7 @@
           {
             "type": "string",
             "format": "date-time",
-            "description": " (Required). Format: 2006-01-02T15:04:05Z07:00",
+            "description": " (Required)",
             "name": "endTime",
             "in": "query",
             "required": true
@@ -550,7 +590,7 @@
             "minimum": 1,
             "type": "integer",
             "format": "int64",
-            "description": "分頁頁數 (Required, Minimum: 1)",
+            "description": "分頁頁數 (Minimum: 1, Required)",
             "name": "page",
             "in": "query",
             "required": true
@@ -808,7 +848,7 @@
           {
             "type": "string",
             "format": "date-time",
-            "description": " (Required). Format: 2006-01-02T15:04:05Z07:00",
+            "description": " (Required)",
             "name": "startTime",
             "in": "query",
             "required": true
@@ -816,7 +856,7 @@
           {
             "type": "string",
             "format": "date-time",
-            "description": " (Required). Format: 2006-01-02T15:04:05Z07:00",
+            "description": " (Required)",
             "name": "endTime",
             "in": "query",
             "required": true
@@ -1476,7 +1516,6 @@
           "type": "string"
         },
         "EndTime": {
-          "description": "Time format: 2006-01-02T15:04:05Z07:00",
           "type": "string",
           "format": "date-time"
         },
@@ -1498,7 +1537,6 @@
           "minimum": 20
         },
         "StartTime": {
-          "description": "Time format: 2006-01-02T15:04:05Z07:00",
           "type": "string",
           "format": "date-time"
         }
@@ -1800,7 +1838,6 @@
       ],
       "properties": {
         "EndTime": {
-          "description": "Time format: 2006-01-02T15:04:05Z07:00",
           "type": "string",
           "format": "date-time"
         },
@@ -1821,7 +1858,6 @@
           "minimum": 20
         },
         "StartTime": {
-          "description": "Time format: 2006-01-02T15:04:05Z07:00",
           "type": "string",
           "format": "date-time"
         }
@@ -2094,6 +2130,26 @@
       }
     },
     "ValidCodeResponse": {
+      "type": "object",
+      "properties": {
+        "succeed": {
+          "type": "boolean"
+        }
+      }
+    },
+    "VerifyCodeRequest": {
+      "type": "object",
+      "required": [
+        "code"
+      ],
+      "properties": {
+        "code": {
+          "description": "驗證碼",
+          "type": "string"
+        }
+      }
+    },
+    "VerifyCodeResponse": {
       "type": "object",
       "properties": {
         "succeed": {
